fix services section flex item size / spacing (#26)

--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -13,6 +13,8 @@
 	flex: 1 1 0;
 	width: 100%;
 	padding: 0 1rem;
+	max-width: 550px;
+	margin: 0 auto;
 }
 
 @media (max-width: $max-mobile-width) {
